corrected the spacing in home section

--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -1,17 +1,17 @@
 .hero {
-  height: 90vh;
+  height: 80vh;
   padding: 0rem 3rem 0rem 4rem;
   line-height: 1.2;
   letter-spacing: 0rem;
   display: flex;
-  align-items: center;
-  transform: translateY(-4rem);
+  align-items: flex-end;
+  /* transform: translateY(-4rem); */
 }
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  transform: translateY(2.5rem);
+  /* transform: translateY(2.5rem); */
 }
 .heroContent {
   display: flex;
@@ -23,6 +23,7 @@
 .heroContent button {
   flex-basis: auto;
   display: inline;
+  border-radius: 0.8rem;
 }
 .heroContent span {
   color: var(--primary-color);
