--- a/src/components/UI/SectionWrapper.module.css
+++ b/src/components/UI/SectionWrapper.module.css
@@ -10,7 +10,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.6rem;
   justify-content: space-between;
 }
 
